chromeos: removes some dead code

MASH_DEPRECATED is never set anymore.

BUG=692193
TEST=none

Change-Id: I49a99e9e3c6bbc7f3c77238e450e18c4ffd6b992
Reviewed-on: https://chromium-review.googlesource.com/1176102
Reviewed-by: Dan Erat <derat@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583307}