ash/system/power/power_event_observer.cc
@@ -8,7 +8,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <map>
 #include <utility>
 
-#include "ash/public/cpp/config.h"
 #include "ash/root_window_controller.h"
 #include "ash/session/session_controller.h"
 #include "ash/shell.h"
@@ -284,10 +283,7 @@ void PowerEventObserver::SuspendImminent(
 void PowerEventObserver::SuspendDone(const base::TimeDelta& sleep_duration) {
   suspend_in_progress_ = false;
 
-  // TODO(derat): After mus exposes a method for resuming displays, call it
-  // here: http://crbug.com/692193
-  if (Shell::GetAshConfig() != Config::MASH_DEPRECATED)
-    Shell::Get()->display_configurator()->ResumeDisplays();
+  Shell::Get()->display_configurator()->ResumeDisplays();
   Shell::Get()->system_tray_model()->clock()->NotifyRefreshClock();
 
   // If the suspend request was being blocked while waiting for the lock
@@ -349,15 +345,9 @@ void PowerEventObserver::StopCompositingAndSuspendDisplays() {
 
   ui::UserActivityDetector::Get()->OnDisplayPowerChanging();
 
-  // TODO(derat): After mus exposes a method for suspending displays, call it
-  // here: http://crbug.com/692193
-  if (Shell::GetAshConfig() != Config::MASH_DEPRECATED) {
-    Shell::Get()->display_configurator()->SuspendDisplays(
-        base::Bind(&OnSuspendDisplaysCompleted,
-                   base::Passed(&displays_suspended_callback_)));
-  } else {
-    std::move(displays_suspended_callback_).Run();
-  }
+  Shell::Get()->display_configurator()->SuspendDisplays(
+      base::Bind(&OnSuspendDisplaysCompleted,
+                 base::Passed(&displays_suspended_callback_)));
 }
 
 void PowerEventObserver::EndPendingWallpaperAnimations() {
